add_executable(03_01_DuplicationInArray 03_01_DuplicationInArray.cpp ${UTILITIES_SRC_LIST})
add_executable(03_02_DuplicationInArrayNoEdit 03_02_DuplicationInArrayNoEdit.cpp ${UTILITIES_SRC_LIST})
add_executable(04_FindInPartiallySortedMatrix 04_FindInPartiallySortedMatrix.cpp ${UTILITIES_SRC_LIST})
add_executable(11_MinNumberInRotatedArray 11_MinNumberInRotatedArray.cpp ${UTILITIES_SRC_LIST})
add_executable(21_ReorderArray 21_ReorderArray.cpp ${UTILITIES_SRC_LIST})
add_executable(39_MoreThanHalfNumberInArray 39_MoreThanHalfNumberInArray.cpp ${UTILITIES_SRC_LIST})