add_executable(03_01_DuplicationInArray 03_01_DuplicationInArray.cpp ${UTILITIES_SRC_LIST})
add_executable(03_02_DuplicationInArrayNoEdit 03_02_DuplicationInArrayNoEdit.cpp ${UTILITIES_SRC_LIST})
add_executable(04_FindInPartiallySortedMatrix 04_FindInPartiallySortedMatrix.cpp ${UTILITIES_SRC_LIST})
add_executable(11_MinNumberInRotatedArray 11_MinNumberInRotatedArray.cpp ${UTILITIES_SRC_LIST})
add_executable(21_ReorderArray 21_ReorderArray.cpp ${UTILITIES_SRC_LIST})
add_executable(39_MoreThanHalfNumberInArray 39_MoreThanHalfNumberInArray.cpp ${UTILITIES_SRC_LIST})
add_executable(42_GreatestSumOfSubArrays 42_GreatestSumOfSubArrays.cpp ${UTILITIES_SRC_LIST})
add_executable(45_SortArrayForMinNumber 45_SortArrayForMinNumber.cpp ${UTILITIES_SRC_LIST})
add_executable(51_InversePairsInArray 51_InversePairsInArray.cpp ${UTILITIES_SRC_LIST})
add_executable(56_01_NumbersAppearOnceInArray 56_01_NumbersAppearOnceInArray.cpp ${UTILITIES_SRC_LIST})
add_executable(56_02_NumberAppearOnceInArray 56_02_NumberAppearOnceInArray.cpp ${UTILITIES_SRC_LIST})
add_executable(66_ConstructProductArray 66_ConstructProductArray.cpp ${UTILITIES_SRC_LIST})