add_executable(05_PrintListInReversedOrder 05_PrintListInReversedOrder.cpp ${UTILITIES_SRC_LIST})
add_executable(15_FindKthNode2Tail 15_FindKthNode2Tail.cpp ${UTILITIES_SRC_LIST})
add_executable(16_ReverseList 16_ReverseList.cpp ${UTILITIES_SRC_LIST})
add_executable(17_MergeSortedLists 17_MergeSortedLists.cpp ${UTILITIES_SRC_LIST})
add_executable(26_CopyComplexList 26_CopyComplexList.cpp ${UTILITIES_SRC_LIST})