add_executable(06_PrintListInReversedOrder 06_PrintListInReversedOrder.cpp ${UTILITIES_SRC_LIST})
add_executable(22_FindKthNode2Tail 22_FindKthNode2Tail.cpp ${UTILITIES_SRC_LIST})
add_executable(24_ReverseList 24_ReverseList.cpp ${UTILITIES_SRC_LIST})
add_executable(25_MergeSortedLists 25_MergeSortedLists.cpp ${UTILITIES_SRC_LIST})
add_executable(35_CopyComplexList 35_CopyComplexList.cpp ${UTILITIES_SRC_LIST})
add_executable(52_FirstCommonNodeInList 52_FirstCommonNodeInList.cpp ${UTILITIES_SRC_LIST})
add_executable(23_EntryNodeInListLoop 23_EntryNodeInListLoop.cpp ${UTILITIES_SRC_LIST})
add_executable(18_02_DeleteDuplicationNode 18_02_DeleteDuplicationNode.cpp ${UTILITIES_SRC_LIST})