add_executable(05_ReplaceSpace 05_ReplaceSpace.cpp ${UTILITIES_SRC_LIST})
add_executable(38_StringPermutation 38_StringPermutation.cpp ${UTILITIES_SRC_LIST})
add_executable(50_01_FirstNotRepeatingChar 50_01_FirstNotRepeatingChar.cpp ${UTILITIES_SRC_LIST})
add_executable(58_01_ReverseWordsInSentence 58_01_ReverseWordsInSentence.cpp ${UTILITIES_SRC_LIST})