add_executable(05_ReplaceSpace 05_ReplaceSpace.cpp ${UTILITIES_SRC_LIST})
add_executable(38_StringPermutation 38_StringPermutation.cpp ${UTILITIES_SRC_LIST})
add_executable(50_01_FirstNotRepeatingChar 50_01_FirstNotRepeatingChar.cpp ${UTILITIES_SRC_LIST})
add_executable(58_01_ReverseWordsInSentence 58_01_ReverseWordsInSentence.cpp ${UTILITIES_SRC_LIST})
add_executable(58_02_LeftRotateString 58_02_LeftRotateString.cpp ${UTILITIES_SRC_LIST})
add_executable(67_String2Int 67_String2Int.cpp ${UTILITIES_SRC_LIST})
add_executable(19_RegularExpressionsMatching 19_RegularExpressionsMatching.cpp ${UTILITIES_SRC_LIST})
add_executable(20_NumericStrings 20_NumericStrings.cpp ${UTILITIES_SRC_LIST})