add_executable(07_ConstructBinaryTree 07_ConstructBinaryTree.cpp ${UTILITIES_SRC_LIST})
add_executable(08_NextNodeInBinaryTree 08_NextNodeInBinaryTree.cpp ${UTILITIES_SRC_LIST})
add_executable(26_SubstructureInTree 26_SubstructureInTree.cpp ${UTILITIES_SRC_LIST})
add_executable(27_MirrorOfBinaryTree 27_MirrorOfBinaryTree.cpp ${UTILITIES_SRC_LIST})
add_executable(28_SymmetricalBinaryTree 28_SymmetricalBinaryTree.cpp ${UTILITIES_SRC_LIST})
add_executable(32_01_PrintBinaryTreeFromTop2Bottom 32_01_PrintBinaryTreeFromTop2Bottom.cpp ${UTILITIES_SRC_LIST})